# trading_app

./: .dockerignore  .env.example  .gitignore  .mcp.json  .replit  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.mt5  _audit_bars.html  _dd_scale.html  apps.json  cloud-init.sh  design_guidelines.md  docker-compose.yml  docker-migrate.sql  ecosystem.config.cjs  logs_raw.json  mt5_common.ini  mt5_supervisor.conf  package-lock.json  package.json  pyproject.toml  redeploy.sh  replit.md  requirements.txt  start.sh  tailwind.config.ts  vite.config.ts
.claude/: PLAN.md
.playwright-mcp/: page-2026-06-10T16-51-57-688Z.yml  page-2026-06-10T19-49-41-233Z.yml  page-2026-06-10T19-50-17-467Z.yml  page-2026-06-10T19-50-31-669Z.yml  page-2026-06-10T19-51-39-880Z.yml  page-2026-06-10T20-05-07-684Z.yml  page-2026-06-10T22-14-44-765Z.yml  page-2026-06-15T19-09-01-830Z.yml
attached_assets/: Pasted--Admin-users-Failed-to-load-users-message-Cannot-conver_1777785144469.txt  Pasted--DOCTYPE-html-html-class-light-lang-en-style-head-meta-_1779806891757.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1763766994374_1763766994376.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1763807076046_1763807076046.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1764087261981_1764087261982.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1764486543805_1764486543806.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1764489726404_1764489726405.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1764901174032.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1765182959417.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1765268570158.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1765293373947.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1765296797176.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1765540668905.txt  Pasted--Error-ERR-MODULE-NOT-FOUND-Cannot-find-package-vite-imported-from-app-dist-index-js-at--1764123556492_1764123556493.txt  Pasted--Force-TELEGRAM-ENABLED-to-true-no-env-var-needed-process-env-TELEGRAM-ENABLED-true-i-1764382072005_1764382072008.txt  Pasted--Infod-trading-partner-System-Execution-Plan-1-Core-Functions-Scan-financial-markets-to-id-1758119775350_1758119775350.txt  (+88 more)
client/: index.html  preview-qc.html  (+3 more)
(+552 files in other folders)
