[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-generativeai>=0.8.6",
    "matplotlib>=3.10.7",
    "mplfinance>=0.12.10b0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pycoingecko>=3.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "tessa>=0.9.0",
    "yfinance>=0.2.66",
]
